fix mobile header z-index. footer button

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ header {
   left: 0;
   width: 100%;
   background: linear-gradient(to bottom, rgba(17, 17, 17, 0.85) 0%, rgb(17, 17, 17) 43%);
-  z-index: 1;
+  z-index: 5;
 }
 @media (min-width: 790px) {
   header {
@@ -296,7 +296,7 @@ footer .footer_box .footer_right_section .footer_right_section_image_box_line {
   footer {
     max-width: 1771px;
     padding-left: 266px;
-    bottom: 10px;
+    bottom: 0px;
     left: 50%;
     transform: translateX(-50%);
     background-clip: content-box;
