--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -170,7 +170,7 @@ footer {
   footer {
     max-width: 1771px;
     padding-left: 266px;
-    bottom: 10px;
+    bottom: 0px;
     left: 50%;
     transform: translateX(-50%);
     background-clip: content-box;
