--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -11,7 +11,7 @@ header {
     rgba(17, 17, 17, 0.85) 0%,
     rgba(17, 17, 17, 1) 43%
   );
-  z-index: 1;
+  z-index: 5;
 
   @media (min-width: 790px) {
     display: grid;
